@@ -20,7 +20,12 @@ Usage
 Java 6 or later is recommended to run JPass. Most platforms have a mechanism to execute `.jar` files (e.g. double click the `jpass-0.1.16-SNAPSHOT.jar`).
 You can also run the application from the command line by typing (the password file is optional):
 
-    java -jar jpass-0.1.16-SNAPSHOT.jar [password_file]
+    java -Dfile.encoding=UTF-8 \
+         -Duser.language=en \
+         -Djava.util.logging.config.file=logging.properties \
+         -Djava.security.manager \
+         -Djava.security.policy=java.policy \
+         -jar jpass.jar [password_file]
 
 Download
 --------
